--- a/src/input.css
+++ b/src/input.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 .card {
-  @apply bg-white rounded-md overflow-hidden shadow-md relative sm:mb-10;
+  @apply bg-white rounded-md overflow-hidden shadow-md relative;
 }
 
 .badge {
